cluster/apps/jellyseer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseer
  labels:
    app.kubernetes.io/name: jellyseer
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jellyseer
