cluster/apps/jellyseer/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseer
  namespace: media
  annotations:
    gethomepage.dev/description: "Jellyseerr - Media Requests"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media Management"
    gethomepage.dev/icon: "sh-jellyseerr"
    gethomepage.dev/name: "Jellyseerr"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=jellyseer
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - requests.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: jellyseer
          port: 5055
          weight: 1
